--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,18 @@ h1 {
 }
 
 
+/*Pr la rotation du titre h1*/
+
+.spray {
+    -webkit-transform: rotate(-10deg);
+    -moz-transform: rotate(-10deg);
+    -o-transform: rotate(-10deg);
+    /* filter:progid:DXImageTransform.Microsoft.BasicImage(rotation=1.1); */
+    -ms-transform: rotate(-10deg);
+    transform: rotate(-10deg);
+}
+
+
 /*Header*/
 
 .bg-dark {
@@ -28,6 +40,12 @@ h1 {
 .navbar {
     /*pr modif la hauteur de la navbar*/
     height: 80px;
+}
+
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
